<resources>
    <string name="app_name">BusinessCard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_card">My card</string>
    <string name="edit">EDIT</string>
    <string name="call">CALL</string>
    <string name="email">EMAIL</string>
    <string name="email_text_input">Email</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full name</string>
    <string name="save">save</string>
    <string name="delete">DELETE</string>
    <string name="add_new_contact">add new contact</string>
    <string name="qr_code">QR CODE</string>
    <string name="add">add</string>
    <string name="qr_code_scanner">qr code</string>
    <string name="scan_qr">scan qr</string>
</resources>