<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.editfragment.EditFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbarColor"
            android:minHeight="?android:attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/qr_code_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:background="@color/toolbarColor"
                android:gravity="center"
                android:src="@drawable/ic_baseline_view"
                android:text="@string/qr_code_scanner"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/contacts_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/toolbarColor"
                android:gravity="center"
                android:src="@drawable/ic_baseline_view"
                android:text="@string/add_new_contact"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/delete_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/delete"
            android:textColor="@color/toolbarColor"
            app:layout_constraintBottom_toTopOf="@+id/circleImageView"
            app:layout_constraintEnd_toStartOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_top" />

        <Button
            android:id="@+id/switch_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:textColor="@color/toolbarColor"
            app:layout_constraintBottom_toTopOf="@+id/circleImageView"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_top" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="@color/blue"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/linear_layout_margin"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_text_field"
                style="@style/text_input_field_style"
                android:hint="@string/full_name">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_field"
                style="@style/text_input_field_style"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_field"
                style="@style/text_input_field_style"
                android:hint="@string/email_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/linear_layout_margin"
            android:paddingRight="@dimen/linear_layout_margin"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/call_button"
                style="@style/buttonStyle"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/call"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/email_button"
                style="@style/buttonStyle"
                android:layout_marginStart="@dimen/button_margin"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </LinearLayout>

        <ImageView
            android:id="@+id/qr_code_image_view"
            android:layout_width="@dimen/width_barcode"
            android:layout_height="@dimen/height_barcode"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>